--- a/index.html
+++ b/index.html
@@ -12,21 +12,29 @@
 <body>
 <div class="wrapper">
     <div class="intro">
-        <div class="profile">
+        <!-- <div class="profile">
             <div class="photo">
-            <!-- <img src="https://i.imgur.com/zh9eNsh.jpg"> -->
+            <img src="https://i.imgur.com/zh9eNsh.jpg">
             </div>
             <div class="bio">
-            <!-- <h1 class="name">Dahyun Ko</h1> -->
+            <h1 class="name">Dahyun Ko</h1>
             <h1 class="name">Developer</h1>
             <p class="profession"> </p>
             </div>
-        </div>
-        <div class="intro-section about">
+        </div> 
+        <div class=" intro-section about">
             <h1 class="title">about me</h1>
             <p class="paragraph">
                 사람을 향한 소프트웨어 기술 기반의 안전하고 행복한 세상을 만드는 것이 저의 비전입니다.
             </p>
+        </div> -->
+        <div class="profile" style="padding: 10px;">
+            <div class=" intro-section about">
+                <h1 class="title" style="color: #ffffff;">about me</h1>
+                <p class="paragraph" style="color: #ffffff; text-align: center;">
+                    사람을 향한 소프트웨어 기술 기반의 안전하고 행복한 세상을 만드는 것이 저의 비전입니다.
+                </p>
+            </div> 
         </div>
         <!-- <div class="intro-section contact">
             <h1 class="title">Contact</h1>
@@ -196,6 +204,9 @@
                         <li>tailwind</li>
                         <li>AWS</li>
                     </ul>
+                    <div>
+                        <img src="https://github.com/user-attachments/assets/dda4f88d-e53b-4b55-9fc6-dfc1c87cb6e5" style="width: 65%; height: auto; border-radius: 10px;"/>
+                    </div>
                     <p>: 학생 포트폴리오기반 선후배 연결을 통한 고객의 취업과 자산관리 플랫폼</p>
                     <ul class="make_interval">
                         <li>
@@ -215,6 +226,15 @@
                                 <i class="fas fa-square"></i>담당
                             </span>
                             <span> : 팀장, 개발(BE/ FE), 기획, 발표</span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>기획
+                            </span>
+                            <span> : 대학교 입학부터 은퇴이후까지 통섭하여 고객에게 동문 선배의 학습 경험과 금융 로드맵을 제공</span>
+                            <div>
+                                <img src="https://github.com/user-attachments/assets/dbc80300-21f8-4858-8fce-2174c693524c" alt="" style="width: 90%; height: auto; border-radius: 10px; margin-left: 30px; margin-top: 10px;">
+                            </div>
                         </li>
                         <li>
                             <span class="detail-content-midname">
@@ -246,6 +266,9 @@
                                     <span style="margin-left: 10px;">
                                         : 금융 API를 활용하여 고객이 가입한 금융 상품(예금, 적금, 대출)으로 앞으로의 금융 로드맵 설계
                                     </span>
+                                    <div>
+                                        <img src="https://github.com/user-attachments/assets/cb30b1bb-6482-4464-8644-a0901105b233" alt="" style="width: 80%; height: auto; border-radius: 10px; margin: 10px 0 0 30px;">
+                                    </div>
                                 </li>
                             </ul>
                         </li>
@@ -271,6 +294,7 @@
                                 .. See more Go to GitHub conSoltant
                             </a>
                         </li>
+                        <li style="width: 20px; height: 40px;"></li>
                     </ul>
                 </div>
                 <div class="timeline-block">
@@ -284,6 +308,9 @@
                         <li>Elasticsearch</li>
                         <li>AWS</li>
                     </ul>
+                    <div>
+                        <img src="https://github.com/user-attachments/assets/3e283bb0-5f02-4bb2-84fc-7b0fc1f2fbc3" alt="" style="width: 80%; height: auto; border-radius: 10px;">
+                    </div>
                     <p>: chrom extension을 통해 기사를 스크랩 한 후 이를 다른 사람들과 인사이트를 공유 및 인사이트 추천 서비스</p>
                     <ul class="make_interval">
                         <li>
@@ -323,6 +350,9 @@
                                 </li>
                                 <li>
                                     ▫ 서비스 소개 페이지 '스크롤에 따른 이미지 크기 변경' 등 인터렉티브한 페이지 구성
+                                    <div>
+                                        <img src="https://github.com/user-attachments/assets/51a51d7a-2fe6-4304-b817-3da3604f554c" alt="" style="width: 70%; height: auto; border-radius: 10px;">
+                                    </div>
                                 </li>
                             </ul>
                         </li>
@@ -354,6 +384,7 @@
                                 .. See more Go to GitHub getsBee
                             </a>
                         </li>
+                        <li style="width: 20px; height: 70px;"></li>
                     </ul>
                 </div>
                 <div class="timeline-block">
@@ -366,6 +397,9 @@
                         <li>AWS</li>
                         <li>Gemini API</li>
                     </ul>
+                    <div >
+                        <img src="https://github.com/user-attachments/assets/13dceaec-6ade-4881-85f3-dd106de8ca20" alt="" style="width: 90%; height: auto; border-radius: 10px;">
+                    </div>
                     <p>: 공공데이터, TMap, Gemini AI API를 활용한 국내 여행지 및 개인화 맟춤 코스 추천 웹 서비스 </p>
                     <ul class="make_interval">
                         <li>
@@ -425,6 +459,9 @@
                                     <p style="padding-left: 15px;">
                                         : 공공 데이터 API, TMAP API 지역 정보 활용하여 장소 정보 및 지도 제공
                                     </p>
+                                    <div >
+                                        <img src="https://github.com/user-attachments/assets/13dceaec-6ade-4881-85f3-dd106de8ca20" alt="" style="width: 80%; height: auto; border-radius: 10px; margin: 10px 0 0 30px;">
+                                    </div>
                                 </li>
                             </ul>
                         </li>
@@ -539,6 +576,11 @@
                         <li>Putty</li>
                         <li>NCP</li>
                     </ul>
+                    <div style="display: flex; justify-content: center; align-items: center;" >
+                        <img src="https://github.com/user-attachments/assets/ee2d322d-a1d8-4618-81a5-21f38da2344d" alt="" style="width: 20%; height: auto; border-radius: 10px; margin-right: 50px;">
+                        <!-- <img src="https://user-images.githubusercontent.com/101400650/205231657-ed68b949-99b1-43c0-a559-731bff2db127.png" alt="" style="width: 65%; height: auto; border-radius: 10px; margin: 0 10px 0;"> -->
+                         <img src="https://user-images.githubusercontent.com/101400650/205240014-240dd8cf-9872-4043-a90e-f7e601c5e616.png" alt=""  style="width: 30%; height: auto; border-radius: 10px;">
+                    </div>
                     <p>: 웹을 통해 <strong>현재 상황 이미지</strong>와 <strong>TEXT</strong>를 전송하는 <span class="underline">간편 신고 서비스</span></p>                    
                     <ul class="make_interval">
                         <li>
@@ -584,7 +626,9 @@
                                 <li>▫ Express 웹 서버 구성, 라우팅 처리, 퍼블리싱</li>
                                 <li>▫ User 페이지와 REST API 통신 및 CORS 설정, CRUD</li>
                                 <li>▫ Mysql DB 설계 및 구축/ RestAPI 통신 설계</li>
-
+                                <div >
+                                    <img src="https://user-images.githubusercontent.com/101400650/205231657-ed68b949-99b1-43c0-a559-731bff2db127.png" alt="" style="width: 80%; height: auto; border-radius: 10px; margin: 10px 0 0 30px;">
+                                </div>
                                 <li class="style-bold">
                                     <i class="fas fa-play" style="color: #cbd5e1;"></i> 배포</li>
                                 <li>AWS 웹 EC2, RDS, SSL 인증</li>
@@ -641,10 +685,10 @@
                                 <ul class="detail-content-ul">
                                     <li>
                                         <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin/tree/main#wbs-" class="underline-link style-bold" title="WBS 도식 보기">
-                                            ▫ WBS 도식 화면 자세히 보기
+                                            ▫ WBS 도식 화면
                                         </a>
-                                        <button id="toggleButton" onclick="toggleImage()" style="background: none; border: none; color:#444444;"><i class="fas fa-play fa-rotate-90" style="color: #cbd5e1;"></i></button>
-                                        <img id="wbsImage" src="https://user-images.githubusercontent.com/101400650/267573451-16454258-8e70-4b52-a47a-3eb00a870668.png" style="width: 100%; display: none; ">
+                                        <!-- <button id="toggleButton" onclick="toggleImage()" style="background: none; border: none; color:#444444;"><i class="fas fa-play fa-rotate-90" style="color: #cbd5e1;"></i></button> -->
+                                        <img id="wbsImage" src="https://github.com/user-attachments/assets/42a836ab-0ca1-4441-920b-8f3c413a3359" style="width: 90%; display: block; ">
                                     </li>
                                 </ul>
                             </span>
@@ -701,6 +745,7 @@
                             </span>
                             <p>: "<strong class="hilight underline">AI 실내 계단 수해 인식 모델</strong>" 정확도<strong>92%</strong> 달성</p>
                         </li>
+                        <li style="width: 20px; height: 40px;"></li>
                     </ul>
                 </div>
                 <!-- 인턴 -->
