--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 .. See more Go to GitHub conSoltant
                             </a>
                         </li>
-                        <li style="width: 20px; height: 40px;"></li>
+                        <li style="width: 20px; height: 55px;"></li>
                     </ul>
                 </div>
                 <div class="timeline-block">
@@ -384,7 +384,7 @@
                                 .. See more Go to GitHub getsBee
                             </a>
                         </li>
-                        <li style="width: 20px; height: 70px;"></li>
+                        <li style="width: 20px; height: 60px;"></li>
                     </ul>
                 </div>
                 <div class="timeline-block">
@@ -745,7 +745,7 @@
                             </span>
                             <p>: "<strong class="hilight underline">AI 실내 계단 수해 인식 모델</strong>" 정확도<strong>92%</strong> 달성</p>
                         </li>
-                        <li style="width: 20px; height: 40px;"></li>
+                        <!-- <li style="width: 20px; height: 20px;"></li> -->
                     </ul>
                 </div>
                 <!-- 인턴 -->
