--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 <body>
 <div class="wrapper">
     <div class="intro">
-        <!-- <div class="profile">
-            <div class="photo">
+        <div class="profile">
+            <!-- <div class="photo">
             <img src="https://i.imgur.com/zh9eNsh.jpg">
-            </div>
+            </div> -->
             <div class="bio">
             <h1 class="name">Dahyun Ko</h1>
-            <h1 class="name">Developer</h1>
-            <p class="profession"> </p>
+            <p class="profession">Backend Developer</p>
             </div>
         </div> 
         <div class=" intro-section about">
@@ -27,15 +26,15 @@
             <p class="paragraph">
                 사람을 향한 소프트웨어 기술 기반의 안전하고 행복한 세상을 만드는 것이 저의 비전입니다.
             </p>
-        </div> -->
-        <div class="profile" style="padding: 10px;">
+        </div>
+        <!-- <div class="profile" style="padding: 10px;">
             <div class=" intro-section about">
                 <h1 class="title" style="color: #ffffff;">about me</h1>
                 <p class="paragraph" style="color: #ffffff; text-align: center;">
                     사람을 향한 소프트웨어 기술 기반의 안전하고 행복한 세상을 만드는 것이 저의 비전입니다.
                 </p>
             </div> 
-        </div>
+        </div> -->
         <!-- <div class="intro-section contact">
             <h1 class="title">Contact</h1>
             <div class="info-section info-section-display link">
@@ -139,7 +138,7 @@
                     <li>
                         <span class="detail-content-midname">
                             <i class="fas fa-square"></i>
-                            <span style="color: #0046ff;">신한은행 해커톤 최우수상</span>
+                            <span>신한은행 해커톤 최우수상</span>
                         </span>: 
                         <a target="_blank" rel="author" href="https://github.com/team-conSOLtant" class="underline-link" title="프로젝트 자세한 설명" >
                             SOL 학생 로드맵
@@ -324,6 +323,12 @@
                                 <i class="fas fa-square"></i>인원
                             </span>
                             <span> : FE 3인 / BE 3인</span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>URL
+                            </span>
+                            <span> : <a href="https://getsbee.kr/about">https://getsbee.kr/about</a></span>
                         </li>
                         <li>
                             <span class="detail-content-midname">
