--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </p>
             </div> 
         </div> -->
-        <!-- <div class="intro-section contact">
+        <div class="intro-section contact">
             <h1 class="title">Contact</h1>
             <div class="info-section info-section-display link">
                 <div class="icon-display">
@@ -59,7 +59,7 @@
                     </a>
                 </div>
             </div>
-        </div> -->
+        </div>
         
     </div>
     <div class="detail">
